--- a/default.conf.template
+++ b/default.conf.template
@@ -43,6 +43,23 @@ server {
     server_name localhost;
     root /var/www/example.com/;
 
+    
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+  
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    ssl_session_tickets off;
+
+    
+    add_header Strict-Transport-Security "max-age=31536000" always;
+
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 8.8.8.8 8.8.4.4 valid=300s;
+    resolver_timeout 5s;
+
     location /proxy  {
         # Проверка токена через сервис авторизации
         auth_request /check;
