--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
       - "443:80"
     volumes:
       - ./default.conf.template:/etc/nginx/templates/default.conf.template:ro
+      - /etc/letsencrypt/live:/etc/certificates
     restart: always
     env_file:
       - .env
