--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,8 @@ services:
       - "443:80"
     volumes:
       - ./default.conf.template:/etc/nginx/templates/default.conf.template:ro
-      - /etc/letsencrypt/live:/etc/certificates
+      - ./certs/letsencrypt/archive/nate-ai.com/fullchain1.pem:/etc/letsencrypt/live/nate-ai.com/fullchain.pem
+      - ./certs/letsencrypt/archive/nate-ai.com/privkey1.pem:/etc/letsencrypt/live/nate-ai.com/privkey.pem
     restart: always
     env_file:
       - .env
