--- a/default.conf.template
+++ b/default.conf.template
@@ -23,11 +23,9 @@ server {
         # Проверка токена через сервис авторизации
         auth_request /check;
 
-        rewrite ^/proxy/googleapis/(.*)$ /$1 break;
-
         proxy_set_header Authorization "";
-        proxy_pass https://texttospeech.googleapis.com/v1/text:synthesize?key=$PROXY_GOOGLELEAPIS_API_KEY;
-        # proxy_pass https://texttospeech.googleapis.com;
+        rewrite ^/proxy/googleapis/(.*)$ /$1?key=$PROXY_GOOGLELEAPIS_API_KEY break;
+        proxy_pass https://texttospeech.googleapis.com;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme; 
         proxy_ssl_server_name on;
@@ -80,11 +78,9 @@ server {
         # Проверка токена через сервис авторизации
         auth_request /check;
 
-        rewrite ^/proxy/googleapis/(.*)$ /$1 break;
-
         proxy_set_header Authorization "";
-        proxy_pass https://texttospeech.googleapis.com/v1/text:synthesize?key=$PROXY_GOOGLELEAPIS_API_KEY;
-        # proxy_pass https://texttospeech.googleapis.com;
+        rewrite ^/proxy/googleapis/(.*)$ /$1?key=$PROXY_GOOGLELEAPIS_API_KEY break;
+        proxy_pass https://texttospeech.googleapis.com;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme; 
         proxy_ssl_server_name on;
